--- a/index.html
+++ b/index.html
@@ -8,20 +8,43 @@
 </head>
 <body>
     <header>
-        <p>a</p>
+        <a href="/">Logo</a>
+        <a href="/">Home</a>
     </header>
+    <div class="quemsomos">
+        <div class="quemsomosconteudo">
+            <div class="qscTexto">
+                <h1>teste!</h1>
+            </div>
+            <div class="qsc">
+                
+            </div>
+        </div>
+    </div>
     <section>
 
-        <div class="leftpane">
-            <h1>Test Page</h1>
+        <div class="item">
+            <img src="img_avatar.png" alt="Avatar" style="width:100%">
+            <div class="texto">
+                <h4><b>John Doe</b></h4>
+                <p>Architect & Engineer</p>
+            </div>
         </div>
 
-        <div class="middlepane">
-            Test Page
+        <div class="item">
+            <img src="imgs/basquete.png" alt="Avatar" style="width:100%">
+            <div class="texto">
+                <h4><b>John Doe</b></h4>
+                <p>Architect & Engineer</p>
+            </div>
         </div>
 
-        <div class="rightpane">
-            <h1>Test Page</h1>
+        <div class="item">
+            <img src="img_avatar.png" alt="Avatar" style="width:100%">
+            <div class="texto">
+                <h4><b>John Doe</b></h4>
+                <p>Architect & Engineer</p>
+            </div>
         </div>
 
     </section>
