--- a/index.html
+++ b/index.html
@@ -8,21 +8,17 @@
 </head>
 <body>
     <header>
-        <a href="/">Logo</a>
+        <a href="page.html"><img src="/imgs/logoret.png" class="img-header"></a>
         <a href="/">Home</a>
     </header>
-    <div class="quemsomos">
-        <div class="quemsomosconteudo">
-            <div class="qscTexto">
-                <h1>teste!</h1>
-            </div>
-            <div class="qsc">
-                
-            </div>
-        </div>
-    </div>
-    <section>
 
+
+    <div class="container">
+        <img src="imgs/loja.png" alt="loja" class="img-loja">
+    </div>
+
+
+    <section>
         <div class="item">
             <img src="img_avatar.png" alt="Avatar" style="width:100%">
             <div class="texto">
@@ -46,7 +42,6 @@
                 <p>Architect & Engineer</p>
             </div>
         </div>
-
     </section>
     
 </body>
