--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
         <a href="/">Home</a>
     </header>
 
-
+    
     <div class="container">
         <img src="imgs/loja.png" alt="loja" class="img-loja">
+        <p class= "texto-direita">Teste</p>
+        <p class= "texto-esquerda">Teste</p>
     </div>
 
 
