--- a/esporte/basquete/index.html
+++ b/esporte/basquete/index.html
@@ -3,9 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>frontpage</title>
+    <title>basquete</title>
+    <link rel="stylesheet" href="/css/frontpage.css">
 </head>
 <body>
-    
+    <header>
+        <a href="/index.html"><img src="/imgs/logoret.png" class="img-header"></a>
+        <h1><strong>TEMPUS VIGOR</strong></h1>
+        <a href="/index.html">Home</a>
+        <a href="/esporte/basquete/index.html">Basquete</a>
+        <a href="/esporte/dardos/index.html">Dardos</a>
+        <a href="/esporte/skating/index.html">Skating</a>
+    </header>
+    <h1>Basquete - Produtos e Serviços</h1>
+    <section>
+        <div class="item">
+            <img src="/imgs/bolabasquete.png" alt="Avatar" style="width:100%">
+            <div class="texto">
+                <h4><b>Bola Profissional - R$500,00</b></h4>
+                <p>Tamanhos 38 ao 46</p>
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="/imgs/tenisbasquete.png" alt="Avatar" style="width:100%">
+            <div class="texto">
+                <h4><b>Tenis - R$1200,00</b></h4>
+                <p>Tamanhos 38 ao 46</p>
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="/imgs/camisetabasquete.png" alt="Avatar" style="width:100%">
+            <div class="texto">
+                <h4><b>Camiseta - R$300,00</b></h4>
+                <p>Tamanhos P ao XGG</p>
+            </div>
+        </div>
+    </section>
+    <h2>Sobre o Esporte:</h2>
+    <p>O basquete, esporte inventado no final do século XIX, conquistou o mundo com sua dinâmica e emoção. Com uma bola e duas cestas, o jogo reúne equipes de cinco jogadores em busca da cesta adversária. A NBA, principal liga profissional, concentra os maiores talentos do mundo, como LeBron James e Michael Jordan, que se tornaram verdadeiras lendas do esporte. A versatilidade do basquete, que pode ser praticado em quadras, ruas ou até mesmo em um simples cesto, o torna acessível a todos. Seja nos Jogos Olímpicos, em campeonatos universitários ou em simples partidas de rua, o basquete une pessoas de diferentes culturas e idades, proporcionando momentos de alegria, superação e muita adrenalina.</p>
+    <h2>Saiba mais em:</h2>
+    <ul>
+        <li><a href="https://pt.wikipedia.org/wiki/Basquetebol">Wikipedia</a></li>
+        <li><a href="https://www.cbb.com.br/">Confederação Brasileira de Basketball</a></li>
+    </ul>
 </body>
 </html>
