--- a/esporte/dardos/index.html
+++ b/esporte/dardos/index.html
@@ -3,9 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>frontpage</title>
+    <title>dardos</title>
+    <link rel="stylesheet" href="/css/frontpage.css">
 </head>
 <body>
-    
+    <header>
+        <a href="/index.html"><img src="/imgs/logoret.png" class="img-header"></a>
+        <h1><strong>TEMPUS VIGOR</strong></h1>
+        <a href="/index.html">Home</a>
+        <a href="/esporte/basquete/index.html">Basquete</a>
+        <a href="/esporte/dardos/index.html">Dardos</a>
+        <a href="/esporte/skating/index.html">Skating</a>
+    </header>
+    <h1>Dardos - Produtos e Serviços</h1>
+    <section>
+        <div class="item">
+            <img src="/imgs/dardosdardo.png" alt="Avatar" style="width:100%">
+            <div class="texto">
+                <h4><b>Conjunto de Dardos Profissionais - R$100,00</b></h4>
+                <p>Estilos Variados</p>
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="/imgs/alvodardo.png" alt="Avatar" style="width:100%">
+            <div class="texto">
+                <h4><b>Alvo - R$100,00</b></h4>
+                <p>Pequeno, Médio e Grande/p>
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="/imgs/porta-dardos.png" alt="Avatar" style="width:100%">
+            <div class="texto">
+                <h4><b>Porta-Dardos - R$50,00</b></h4>
+                <p>Para Pontas e Voadores/p>
+            </div>
+        </div>
+    </section>
+    <h2>Sobre o Esporte:</h2>
+    <p>O dardo, esporte milenar com raízes em diversas culturas, evoluiu de simples práticas de arremesso para uma modalidade profissional que exige precisão e estratégia. Popularizado nos pubs britânicos, o jogo moderno de dardos apresenta regras bem definidas e equipamentos especializados. Com um alvo circular dividido em setores numerados, os jogadores lançam dardos buscando atingir combinações específicas para alcançar a pontuação desejada. A combinação de habilidade física e mental torna o dardo um esporte desafiador e apaixonante, capaz de unir pessoas de diferentes idades e origens em torno de um alvo comum.</p>
+    <h2>Saiba mais em:</h2>
+    <ul>
+        <li><a href="https://pt.wikipedia.org/wiki/Skate">Wikipedia</a></li>
+        <li><a href="https://www.infoescola.com/esportes-radicais/skate/">Infoescola</a></li>
+    </ul>
 </body>
 </html>
