--- a/esporte/skating/index.html
+++ b/esporte/skating/index.html
@@ -3,9 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>frontpage</title>
+    <title>skating</title>
+    <link rel="stylesheet" href="/css/frontpage.css">
 </head>
 <body>
-    
+    <header>
+        <a href="/index.html"><img src="/imgs/logoret.png" class="img-header"></a>
+        <h1><strong>TEMPUS VIGOR</strong></h1>
+        <a href="/index.html">Home</a>
+        <a href="/esporte/basquete/index.html">Basquete</a>
+        <a href="/esporte/dardos/index.html">Dardos</a>
+        <a href="/esporte/skating/index.html">Skating</a>
+    </header>
+    <h1>Skating - Produtos e Serviços</h1>
+    <section>
+        <div class="item">
+            <img src="/imgs/tenisskate.png" alt="Avatar" style="width:100%">
+            <div class="texto">
+                <h4><b>Tenis - R$500,00</b></h4>
+                <p>Tamanhos 38 ao 46</p>
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="/imgs/lixasskate.png" alt="Avatar" style="width:100%">
+            <div class="texto">
+                <h4><b>Lixas - R$75,00 UN</b></h4>
+                <p>Pequeno, Médio e Grande/p>
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="/imgs/shapeskate.png" alt="Avatar" style="width:100%">
+            <div class="texto">
+                <h4><b>Shapes - R$150,00 a R$300,00</b></h4>
+                <p>Tamanhos P ao XGG</p>
+            </div>
+        </div>
+    </section>
+    <h2>Sobre o Esporte:</h2>
+    <p>O skateboarding, ou simplesmente skate, é um esporte radical que nasceu nas praias da Califórnia, nos Estados Unidos, na década de 1950. Surgido como uma alternativa para os surfistas durante os períodos de maré baixa, o esporte rapidamente ganhou adeptos ao redor do mundo. Aos poucos, evoluiu de uma simples prancha com rodinhas para um esporte com diversas modalidades, como street, vert, bowl e park, cada uma com suas próprias características e desafios. Nomes como Tony Hawk, Rodney Mullen e Rayssa Leal marcaram a história do skate, inspirando gerações de skatistas com suas manobras inovadoras. Hoje, o skateboarding é reconhecido como esporte olímpico e conta com campeonatos profissionais ao redor do globo, reunindo atletas de diversas nacionalidades em busca de títulos e reconhecimento.</p>    
+    <h2>Saiba mais em:</h2>
+    <ul>
+        <li><a href="https://pt.wikipedia.org/wiki/Skate">Wikipedia</a></li>
+        <li><a href="https://www.infoescola.com/esportes-radicais/skate/">Infoescola</a></li>
+    </ul>
 </body>
 </html>
