--- a/index.html
+++ b/index.html
@@ -4,51 +4,61 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>frontpage</title>
-    <link rel="stylesheet" href="css/frontpage.css">
+    <link rel="stylesheet" href="/css/frontpage.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header>
-        <a href="page.html"><img src="/imgs/logoret.png" class="img-header"></a>
-        <a href="/">Home</a>
+        <a href="/index.html"><img src="/imgs/logoret.png" class="img-header"></a>
+        <h1><strong>TEMPUS VIGOR</strong></h1>
+        <a href="/index.html">Home</a>
+        <a href="/basquete/index.html">Basquete</a>
+        <a href="/dardos/index.html">Dardos</a>
+        <a href="/skating/index.html">Skating</a>
     </header>
 
     <section>
+
         <div class="item">
-            <img src="img_avatar.png" alt="Avatar" style="width:100%">
-            <div class="texto">
-                <h4><b>John Doe</b></h4>
-                <p>Architect & Engineer</p>
-            </div>
+            <a href="/esporte/dardos/index.html"><img src="imgs/dardos.png" alt="Avatar" style="width:100%">
+                <div class="texto">
+                    <h4><b>Dardos</b></h4>
+                    <p>Produtos e Serviços</p>
+                </div>
+            </a>
         </div>
 
         <div class="item">
-            <img src="imgs/basquete.png" alt="Avatar" style="width:100%">
-            <div class="texto">
-                <h4><b>John Doe</b></h4>
-                <p>Architect & Engineer</p>
-            </div>
+            <a href="/esporte/basquete/index.html"><img src="imgs/bolabasquete.png" alt="Avatar" style="width:100%">
+                <div class="texto">
+                    <h4><b>Basquete</b></h4>
+                    <p>Produtos e Serviços</p>
+                </div>
+            </a>
         </div>
 
         <div class="item">
-            <img src="img_avatar.png" alt="Avatar" style="width:100%">
-            <div class="texto">
-                <h4><b>John Doe</b></h4>
-                <p>Architect & Engineer</p>
-            </div>
+            <a href="/esporte/skating/index.html"><img src="imgs/skate.png" alt="Avatar" style="width:100%">
+                <div class="texto">
+                    <h4><b>Skating</b></h4>
+                    <p>Produtos e Serviços</p>
+                </div>
+            </a>
         </div>
+
+
     </section>
     
     <div class="container">
         <img src="imgs/loja.png" alt="loja" class="img-loja">
         <h1>Sobre Nós/Contato</h1>
         <div class="card-direita">
-            <strong>Aqui na TEMPUS VIGOR, oferecemos uma série de produtos e artigos esportivos, além de uma gama de serviços voltados àqueles que convivem e compartilham do nosso lifestyle.<br> Founder & Owner, por amor, Emanuel Miranda</strong> 
+            <strong>Aqui na TEMPUS VIGOR, oferecemos uma série de produtos e artigos esportivos, além de uma gama de serviços voltados àqueles que convivem e compartilham do nosso lifestyle. Nosso catálogo inclui desde equipamentos de última geração para diversas modalidades, como basquete, dardos e skating, até acessórios e vestuário técnico, desenvolvidos para garantir o máximo desempenho e conforto durante a prática esportiva. Além disso, contamos com uma equipe especializada em nutrição esportiva, que oferece acompanhamento personalizado e planos alimentares adequados para cada objetivo. Para aqueles que buscam aprimorar suas habilidades, oferecemos aulas e workshops com os melhores profissionais do mercado, além de organizar eventos e desafios esportivos que promovem a integração e a superação pessoal.<br><br>Founder & Owner, por amor, Emanuel Miranda.</strong> 
         </div>
         
         <div class="card-esquerda">
             <h3>Onde nos encontrar:</h3>
-            <a href="https://maps.app.goo.gl/j9QWBDJVafufvadL9">Mapa</a>
+            <a href="https://maps.app.goo.gl/j9QWBDJVafufvadL9"><i class="fa-solid fa-map"></i> Mapa</a>
             <h3>Formas de pagamento:</h3>
             <ul>
                 <li><i class="fab fa-cc-visa payment-icon"></i> Visa</li>
