--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <a href="/index.html"><img src="/imgs/logoret.png" class="img-header"></a>
         <h1><strong>TEMPUS VIGOR</strong></h1>
         <a href="/index.html">Home</a>
-        <a href="/basquete/index.html">Basquete</a>
-        <a href="/dardos/index.html">Dardos</a>
-        <a href="/skating/index.html">Skating</a>
+        <a href="/esporte/basquete/index.html">Basquete</a>
+        <a href="/esporte/dardos/index.html">Dardos</a>
+        <a href="/esporte/skating/index.html">Skating</a>
     </header>
 
     <section>
